fix ui issues on mobile

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -71,7 +71,7 @@
 }
 
 .card-wrapper h1 {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 @media (max-width: 992px) {
